# pongario-cpp

./: .clang-format  .clang-tidy  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  cppcheck_platform.h  flake.nix  meson.build
.github/actions/nix-setup/: action.yml
.github/workflows/: build.yml  ci.yml
include/: Application.hpp  Ball.hpp  Brick.hpp  CollisionManager.hpp  GameObject.hpp  GameOverScreen.hpp  Grid.hpp  Hearts.hpp  Paddle.hpp  YouWinScreen.hpp  meson.build
include/interface/: Collidable.hpp  GameObject.hpp  PhysicsProcessor.hpp  Resettable.hpp  Signal.hpp
nix/: pongario-cpp.nix
scripts/: fmt-json.sh
src/: Application.cpp  Ball.cpp  Brick.cpp  CollisionManager.cpp  GameOverScreen.cpp  Grid.cpp  Hearts.cpp  Paddle.cpp  YouWinScreen.cpp  main.cpp  meson.build
src/interface/: GameObject.cpp
