# SPDX-FileCopyrightText: © 2026 Nikita Krasnov <nikita.nikita.krasnov@gmail.com>
#
# SPDX-License-Identifier: MIT

sources = files(
    'Application.cpp',
    'Ball.cpp',
    'Brick.cpp',
    'CollisionManager.cpp',
    'Grid.cpp',
    'Paddle.cpp',
    'interface/GameObject.cpp',
    'main.cpp',
)
