# SPDX-FileCopyrightText: © 2026 Nikita Krasnov <nikita.nikita.krasnov@gmail.com>
#
# SPDX-License-Identifier: MIT

sources = files(
    'Application.cpp',
    'Ball.cpp',
    'Brick.cpp',
    'CollisionManager.cpp',
    'GameOverScreen.cpp',
    'Grid.cpp',
    'Hearts.cpp',
    'Paddle.cpp',
    'YouWinScreen.cpp',
    'interface/GameObject.cpp',
    'main.cpp',
)
